--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/netinfo": "^9.3.5",
+    "@react-native-picker/picker": "^2.4.8",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "amazon-cognito-identity-js": "^5.2.11",
+    "aws-amplify": "^4.3.39",
+    "aws-amplify-react-native": "^6.0.5",
+    "dayjs": "^1.11.5",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
+    "graphql": "^16.6.0",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-dom": "^18.2.0",
+    "react-native": "0.69.6",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
